Update part of User to Sequalize
